styling of home page

--- a/sass/site/_posts-and-pages.scss
+++ b/sass/site/_posts-and-pages.scss
@@ -78,4 +78,96 @@
 }
 
 
+body
+{
+  font-family:'Gill Sans W01 Light';
+  font-size: 1.1rem;
+  line-height: 1.8;
+  color: #474c55;
+}
+h2 {
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  font-family:'Gill Sans W01 Light';
+  font-weight: 100;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  color:#cc9999;
+}
+.contactDetails {
+  font-size: 1.2rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  a {
+      color:#cc9999;
+  }
+  
+}
+.mainContent{
+  padding: 6rem 2rem;
+}
 
+
+/* FORM STYLING */
+
+.gform_wrapper.two-column_wrapper ul.gform_fields {
+display: none;
+}
+.gform_wrapper.two-column_wrapper ul.gform_fields.gform_column {
+display: block;
+float: left;
+width: 50%;
+}
+.gform_wrapper.two-column_wrapper ul.gform_column li.gsection:first-child {
+display: none;
+}
+.gform_wrapper .gform_body .gform_fields .gfield input[type=text] {
+  border: 0px;
+  background-color: #f5f5f3;
+}
+.gform_wrapper .gform_body .gform_fields .gfield textarea {
+  border: 0px;
+  height: 12.6rem;
+  background-color: #f5f5f3; 
+}
+.gform_wrapper .gform_body .gform_fields .gfield .gfield_label {
+  text-align: center;
+  font-size: 0.8rem;
+  letter-spacing: 0.2rem;
+  display: block;
+  text-transform: uppercase;
+}
+.gform_wrapper .gform_footer input[type=submit] {
+  padding:1rem;
+  color: white;
+  letter-spacing: 0.2rem;
+  display: block;
+  text-transform: uppercase;
+  background-color: #999999;
+  
+}
+div.gform_footer.top_label {
+ text-align: center;
+ font-size: 0.8rem;
+}
+
+/* END FORM STYLING */
+
+
+@media only screen and (max-width: 800px) {
+  h2 {
+  font-size:1rem;
+  }
+  .gform_wrapper.two-column_wrapper ul.gform_fields.gform_column {
+    clear: both;
+    width: 100%;
+  }
+  .contactDetails {
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  }
+  .mainContent{
+    padding: 4rem 1rem;
+  }
+}
