--- a/sass/site/_posts-and-pages.scss
+++ b/sass/site/_posts-and-pages.scss
@@ -89,8 +89,8 @@ h2 {
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
-  font-family:'Gill Sans W01 Light';
-  font-weight: 100;
+  font-family:'Gill Sans W01 Medium';
+  font-weight: 400;
   margin-top: 4rem;
   margin-bottom: 2rem;
   color:#cc9999;
