--- a/style.css
+++ b/style.css
@@ -6976,6 +6976,61 @@ h2 {
 .mainContent {
   padding: 6rem 2rem; }
 
+.mainLogo {
+  width: 16rem;
+  margin-top: 4rem;
+  margin-bottom: 2rem; }
+
+.homebanner {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  width: 100%;
+  height: 350px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center; }
+
+.quoteText {
+  padding-right: 40%;
+  padding-top: 4rem;
+  color: white;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: start;
+      align-items: flex-start; }
+
+.quoteCredit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  color: #cc9999;
+  border-top: 1px solid #cc9999;
+  padding-top: 0.5rem;
+  margin-top: 0.7rem; }
+
+/* BUTTONS */
+.bookBtn {
+  white-space: normal;
+  padding: 1rem 2rem;
+  border: 0;
+  border-radius: 0;
+  background-color: #e6e6e7;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-size: 1rem;
+  font-family: 'Gill Sans W01 Light';
+  margin-top: 2rem; }
+
+.bookBtn:hover {
+  background-color: #dbdcdd;
+  color: #000000; }
+
+/* END BUTTONS */
 /* FORM STYLING */
 .gform_wrapper.two-column_wrapper ul.gform_fields {
   display: none; }
@@ -7058,7 +7113,7 @@ div.gform_footer.top_label {
 ## Header
 --------------------------------------------------------------*/
 .site-header {
-  margin-bottom: 3em; }
+  margin-bottom: 0em; }
 
 @font-face {
   font-family: "Gill Sans W01 Light";
@@ -7095,7 +7150,15 @@ div.gform_footer.top_label {
 --------------------------------------------------------------*/
 .site-footer {
   padding: 4rem 0;
-  background-color: #474c55; }
+  background-color: #f5f5f3;
+  text-transform: uppercase; }
+
+.contactDetailsFooter {
+  font-size: 0.9rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase; }
+  .contactDetailsFooter a {
+    color: #cc9999; }
 
 .site-content {
   word-break: break-word; }
