--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -1,4 +1,14 @@
 .site-footer {
 	padding: 4rem 0;
-    background-color: #474c55;
+    background-color: #f5f5f3;
+    text-transform:uppercase;
+}
+.contactDetailsFooter {
+  font-size: 0.9rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  a {
+      color:#cc9999;
+  }
+  
 }
